new(#29): get all articles
